friends/deploy/all.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: friends
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friends
  template:
    metadata:
      labels:
        app: friends
    spec:
      containers:
      - name: friends
        image: evertras/events-demo-friends:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: friends
spec:
  ports:
  - name: http
    targetPort: 13030
    port: 13030
  selector:
    app: friends
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: friends-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friends
  template:
    metadata:
      labels:
        app: friends
    spec:
      containers:
      - name: friends
        image: neo4j:3.5.12
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: friends-db
spec:
  ports:
  - name: http
    targetPort: 7474
    port: 7474
  - name: bolt
    targetPort: 7687
    port: 7687
  selector:
    app: friends
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: friends-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://auth-api:13041/check
    ingress.kubernetes.io/auth-response-headers: X-User-ID
spec:
  rules:
  - host: events-demo.localhost
    http:
      paths:
      - path: /api/friends
        backend:
          serviceName: friends
          servicePort: http
